<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculatordemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="DEL">DEL</string>
    <string name="C">C</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="minus">-</string>
    <string name="number4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="add">+</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num0">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>

</resources>
