<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.YJXdemo1.calculator.MainActivity"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edittext_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:editable="false"
        android:hint="@null"
        android:ems="10"
        android:gravity="right|bottom" >
    </EditText>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:orientation="horizontal"
	    android:gravity="center">

		<Button
		    android:id="@+id/button_C"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:gravity="right|bottom"
		    android:text="@string/C"
		    android:paddingRight="10dp"
		    android:paddingBottom="10dp"
		    style="?android:attr/borderlessButtonStyle"
		    android:background="@drawable/white_selector"
		    android:textSize="20sp" />
		
		<Button
		    android:id="@+id/button_DEL"
		    android:layout_width="60dp"
		    style="?android:attr/borderlessButtonStyle"
		    android:layout_height="60dp"
		    android:layout_marginLeft="10dp"
		    android:gravity="right|bottom"
		    android:paddingRight="10dp"
		    android:paddingBottom="10dp"
		    android:text="@string/DEL"
		    android:background="@drawable/white_selector"
		    android:textSize="20sp" />

		<Button
		    android:id="@+id/button_divide"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    style="?android:attr/borderlessButtonStyle"
		    android:layout_marginLeft="10dp"
		    android:paddingRight="10dp"
		    android:paddingBottom="10dp"
		    android:gravity="right|bottom"
		    android:text="@string/divide"
		    android:background="@drawable/white_selector"
		    android:textSize="20sp" />

		<Button
		    android:id="@+id/button_multiply"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    style="?android:attr/borderlessButtonStyle"
		    android:layout_marginLeft="10dp"
		    android:gravity="right|bottom"
		    android:background="@drawable/white_selector"
		    android:text="@string/multiply"
		    android:paddingRight="10dp"
		    android:paddingBottom="10dp"
		    android:textSize="20sp" />

	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:orientation="horizontal"
	    android:gravity="center">

		<Button
		    android:id="@+id/button_7"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    style="?android:attr/borderlessButtonStyle"
		    android:background="@drawable/white_selector"
		    android:gravity="right|bottom"
		    android:paddingBottom="10dp"
		    android:paddingRight="10dp"
		    android:text="@string/number7"
		    android:textSize="20sp" />
		
		<Button
		    android:id="@+id/button_8"
		    style="?android:attr/borderlessButtonStyle"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:layout_marginLeft="10dp"
		    android:background="@drawable/white_selector"
		    android:gravity="right|bottom"
		    android:paddingBottom="10dp"
		    android:paddingRight="10dp"
		    android:text="@string/number8"
		    android:textSize="20sp" />

		<Button
		    android:id="@+id/button_9"
		    style="?android:attr/borderlessButtonStyle"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:layout_marginLeft="10dp"
		    android:background="@drawable/white_selector"
		    android:gravity="right|bottom"
		    android:paddingBottom="10dp"
		    android:paddingRight="10dp"
		    android:text="@string/number9"
		    android:textSize="20sp" />

		<Button
		    android:id="@+id/button_minus"
		    style="?android:attr/borderlessButtonStyle"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:layout_marginLeft="10dp"
		    android:background="@drawable/white_selector"
		    android:gravity="right|bottom"
		    android:paddingBottom="10dp"
		    android:paddingRight="10dp"
		    android:text="@string/minus"
		    android:textSize="20sp" />

	</LinearLayout>
		<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:orientation="horizontal"
	    android:gravity="center">

		<Button
		    android:id="@+id/button_4"
		    style="?android:attr/borderlessButtonStyle"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:background="@drawable/white_selector"
		    android:gravity="right|bottom"
		    android:paddingBottom="10dp"
		    android:paddingRight="10dp"
		    android:text="@string/number4"
		    android:textSize="20sp" />
		
		<Button
		    android:id="@+id/button_5"
		    style="?android:attr/borderlessButtonStyle"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:layout_marginLeft="10dp"
		    android:background="@drawable/white_selector"
		    android:gravity="right|bottom"
		    android:paddingBottom="10dp"
		    android:paddingRight="10dp"
		    android:text="@string/num5"
		    android:textSize="20sp" />

		<Button
		    android:id="@+id/button_6"
		    style="?android:attr/borderlessButtonStyle"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:layout_marginLeft="10dp"
		    android:background="@drawable/white_selector"
		    android:gravity="right|bottom"
		    android:paddingBottom="10dp"
		    android:paddingRight="10dp"
		    android:text="@string/num6"
		    android:textSize="20sp" />

		<Button
		    android:id="@+id/button_add"
		    style="?android:attr/borderlessButtonStyle"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:layout_marginLeft="10dp"
		    android:background="@drawable/white_selector"
		    android:gravity="right|bottom"
		    android:paddingBottom="10dp"
		    android:paddingRight="10dp"
		    android:text="@string/add"
		    android:textSize="20sp" />

	</LinearLayout>    	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:orientation="horizontal"
	    android:gravity="center">
		<LinearLayout
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:gravity="center">
	    	<LinearLayout
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:orientation="horizontal"
	    		android:gravity="center">

	    		<Button
	    		    android:id="@+id/button_1"
	    		    style="?android:attr/borderlessButtonStyle"
	    		    android:layout_width="60dp"
	    		    android:layout_height="60dp"
	    		    android:background="@drawable/white_selector"
	    		    android:gravity="right|bottom"
	    		    android:paddingBottom="10dp"
	    		    android:paddingRight="10dp"
	    		    android:text="@string/num1"
	    		    android:textSize="20sp" />

				<Button
				    android:id="@+id/button_2"
				    style="?android:attr/borderlessButtonStyle"
				    android:layout_width="60dp"
				    android:layout_height="60dp"
				    android:layout_marginLeft="10dp"
				    android:background="@drawable/white_selector"
				    android:gravity="right|bottom"
				    android:paddingBottom="10dp"
				    android:paddingRight="10dp"
				    android:text="@string/num2"
				    android:textSize="20sp" />

				<Button
				    android:id="@+id/button_3"
				    style="?android:attr/borderlessButtonStyle"
				    android:layout_width="60dp"
				    android:layout_height="60dp"
				    android:layout_marginLeft="10dp"
				    android:background="@drawable/white_selector"
				    android:gravity="right|bottom"
				    android:paddingBottom="10dp"
				    android:paddingRight="10dp"
				    android:text="@string/num3"
				    android:textSize="20sp" />

	    	</LinearLayout>
	    	<LinearLayout
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:orientation="horizontal"
	    		android:layout_marginTop="10dp"
	    		android:gravity="center">

	    		<Button
	    		    android:id="@+id/button_0"
	    		    style="?android:attr/borderlessButtonStyle"
	    		    android:layout_width="130dp"
	    		    android:layout_height="60dp"
	    		    android:background="@drawable/white_selector"
	    		    android:gravity="right|bottom"
	    		    android:paddingBottom="10dp"
	    		    android:paddingRight="10dp"
	    		    android:text="@string/num0"
	    		    android:textSize="20sp" />

				<Button
				    android:id="@+id/button_point"
				    style="?android:attr/borderlessButtonStyle"
				    android:layout_width="60dp"
				    android:layout_height="60dp"
				    android:layout_marginLeft="10dp"
				    android:background="@drawable/white_selector"
				    android:gravity="right|bottom"
				    android:paddingBottom="10dp"
				    android:paddingRight="10dp"
				    android:text="@string/point"
				    android:textSize="20sp" />

	    	</LinearLayout>
	    </LinearLayout>

 		<Button
 		    android:id="@+id/button_equal"
 		    android:layout_width="60dp"
 		    android:layout_height="130dp"
 		    android:layout_marginLeft="10dp"
 		    android:background="@drawable/orange_selector"
 		    android:gravity="right|bottom"
 		    android:paddingBottom="10dp"
 		    android:paddingRight="10dp"
 		    android:text="@string/equal"
 		    android:textSize="20sp" />
	   
	</LinearLayout>
	
</LinearLayout>
